[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialog_plugin/Nodes/misc/resource_selector/resource_selector.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialog_plugin/Nodes/misc/character_selector/character_selector.gd" type="Script" id=2]

[node name="CharacterSelector" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Showname"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 73.0
margin_right = 193.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceSelector" parent="." instance=ExtResource( 1 )]
margin_left = 197.0
margin_right = 227.0
margin_bottom = 24.0
hint_tooltip = "Select a character from FileSystem"
clip_text = true

[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="resource_selected" from="ResourceSelector" to="." method="_on_ResourceSelector_resource_selected"]
